Add gui in example

--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,8 @@
 <body>
     <div id="render"></div>
 
-    <script src="three.js/build/three.min.js"></script>
+    <script src="vendors/three.js/build/three.min.js"></script>
+    <script src="vendors/dat.gui.min.js"></script>
     <script src="../ObjectTrackballControls.js"></script>
     <script src="script.js"></script>
 </body>
